--- a/src/components/HeroSection1.css
+++ b/src/components/HeroSection1.css
@@ -7,7 +7,7 @@ video {
   }
   
   .hero-container1 {
-     background: url('C:\Users\shrut\react-homepage\src\images\about5.jpg'); 
+     background: url('D:\Project\technology-learning-app-main\src\images\about5.jpg'); 
     height: 100vh;
     width: 100%;
     display: flex;
