--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ label {
 }
 
 .card {
-  background-color: #f7f7f7;
+  background-color: #8f90e0;
   padding: 20px 25px 30px;
   margin: 0 auto 25px;
   margin-top: 50px;
